--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 <div id="kaydol">
 <div
-<p id="kayıt">KONULARDAN HABERDAR OLMAK VE PAYLAŞIM YAPMAK İÇİN BİZE KATIL!</p>
+<p id="kayit">KONULARDAN HABERDAR OLMAK VE PAYLAŞIM YAPMAK İÇİN BİZE KATIL!</p>
 <div id="kutu">
 <div id="adrescubugu">
 <p>e-mail adresin:</p>
