--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
 </div>
 <div id = "header">
 <h1>FİLMOGRAFİL</h1>
-<em>Film Tartışmaları</em></br>
+<em>Film Tartışmaları</em><br>
 </div>
 <div id = "filmhaberleri">
-<img id="filmhaberi" src="images/piper.jpg"/>
-<img id="filmhaberi2" src="images/lalaland.jpg"/>
-<img id="filmhaberi3" src="images/fantasticbeasts.jpg"/>
+<img id="filmhaberi" src="images/piper.jpg" alt="resim" />
+<img id="filmhaberi2" src="images/lalaland.jpg" alt="resim"/>
+<img id="filmhaberi3" src="images/fantasticbeasts.jpg" alt="resim"/>
 <p>2017 Oscar Ödülleri Sahiplerini Buldu! En iyi film toplam 6 ödül kazanan La La Land olarak açıklandı, ardından Moonlight'ın seçildiği duyurularak Oscar tarihinde bir ilk yaşandı...</p>
 </div>
 <div id = "orta">
 <div id = "content">
-<div id="haftaninfilmi">
-<img id="haftaninfilmi" src="images/forrestgump.png"/></br>
+<div id="haftaninfilmi1">
+<img id="haftaninfilmi" src="images/forrestgump.png" alt="resim"/><br>
 <strong>Haftanın Filmi</strong>
 <p> "Dünyaya Forrest Gump'ın gözleriyle baktıktan sonra bir daha hiç bir şey aynı olmayacak" </p>
 <button type="button">DEVAMINI OKU</button>
 </div>
-<div id="haftanintartismakonusu">
-<img id="haftanintartismakonusu" src="images/pk.jpg"/></br>
+<div id="haftanintartismakonusu1">
+<img id="haftanintartismakonusu" src="images/pk.jpg" alt="resim"/><br>
 <strong>Haftanın Tartışma Konusu</strong>
 <p> "Farkında olmadığımız önyargılarımızın, sorgusuz sualsiz kabul ettiğimiz dogmatik düşüncelerin, din kavramının, batıl dinlerin, dini kendi amaçları için kullanan insanların en masumane ve ironik bakış açısıyla eleştirilmesi diyebiliriz. Kafasında hiçbir değer yargısı olmayan birinin günlük yaşantımızı ve birçoğumuz için tabu haline gelen din olgusunu objektif bir biçimde eleştirmesi, olaylara farklı açılardan bakmamıza fırsat tanıması aslında filmin ne kadar 'farklı' olduğunu gözler önüne seriyor." </p>
 <button type="button">DEVAMINI OKU</button>
@@ -41,12 +41,12 @@
 <div id = "sagkolon">
 <div id="tartismayarat">
 <div align="center"><p>TARTIŞMA YARAT</p> </div>
-<div align="center"><img id="beyinfırtınası" src="images/brainstorming.jpg"/></div>
+<div align="center"><img id="beyinfırtınası" src="images/brainstorming.jpg" alt="resim"/></div>
 <p id="konuac">Sen de bir konu aç. Diğer kullanıcılarla paylaş. Diğer insanların fikirlerini öğren. Ortaya neler çıkacağını gör.</p>
 </div>
 <div id="kaydol">
-<div
-<p id="kayit">KONULARDAN HABERDAR OLMAK VE PAYLAŞIM YAPMAK İÇİN BİZE KATIL!</p>
+
+<p id="kayit" > KONULARDAN HABERDAR OLMAK VE PAYLAŞIM YAPMAK İÇİN BİZE KATIL!</p>
 <div id="kutu">
 <div id="adrescubugu">
 <p>e-mail adresin:</p>
@@ -55,8 +55,9 @@
 </div>
 </div>
 <div id="filmmenu">
-<ul>
 <h4 id="b">FİLM LİSTELERİ</h4>
+<ul>
+
 <li class="filmliste">Kült Filmler</li>
 <li class="filmliste">Kısa Filmler</li>
 <li class="filmliste">Diziler</li>
@@ -72,8 +73,7 @@
 </div>
 </div>
 </div>
-<div id = "secdiklerimiz">
 </div>
-</div>
+
 </body>
 </html>
